Cache serialized searcher arguments
Every time that search is run, the internal options and fields are serialized to json and encoded. These stay constant across searches, so this commit caches the serialzed version of those params and passes them separate from the per-search params. This should improve performance a bit.

--- a/wafu_rs/Cargo.toml
+++ b/wafu_rs/Cargo.toml
@@ -13,6 +13,7 @@ cfg-if = "0.1.2"
 wasm-bindgen = { version = "=0.2.34", features = ["serde-serialize"] }
 serde = "^1.0.59"
 serde_derive = "^1.0.59"
+serde_json = "1.0"
 
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
